Setup, login, logout, events
Deal with the basics of a MAGE server, dynamically (requires
mage-module-admin).

--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@angular/platform-browser-dynamic": "^4.4.6",
     "@angular/router": "^4.4.6",
     "@asymmetrik/angular2-leaflet": "2.1.4",
-    "@nebular/auth": "2.0.0-rc.3",
+    "@nebular/auth": "^2.0.0-rc.3",
     "@nebular/theme": "2.0.0-rc.3",
     "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.5",
     "@swimlane/ngx-charts": "5.2.0",
@@ -60,6 +60,10 @@
     "intl": "1.2.5",
     "ionicons": "2.0.1",
     "leaflet": "1.0.3",
+    "mage-sdk-js": "^1.0.2",
+    "mage-sdk-js.archivist": "^0.1.0",
+    "mage-sdk-js.session": "^0.1.0",
+    "mage-sdk-js.time": "^0.1.0",
     "nebular-icons": "1.0.6",
     "ng2-ckeditor": "^1.1.9",
     "ng2-smart-table": "1.1.0",
