--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "build:ci": "npm-run-all -p -r build:prod build:prod:aot",
     "test": "ng test -sr",
     "test:coverage": "rimraf coverage && npm run test -- -cc",
+    "test:watch": "npm run test -- --watch=true",
+    "test:watch:coverage": "npm run test:watch -- --code-coverage",
     "lint": "ng lint --type-check",
     "lint:fix": "ng lint --fix",
     "lint:styles": "stylelint ./src/**/*.scss",
@@ -46,7 +48,7 @@
     "@asymmetrik/angular2-leaflet": "2.1.4",
     "@nebular/auth": "^2.0.0-rc.3",
     "@nebular/theme": "2.0.0-rc.3",
-    "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.5",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
     "@swimlane/ngx-charts": "5.2.0",
     "angular2-chartjs": "^0.3.0",
     "angular2-toaster": "4.0.0",
@@ -59,6 +61,7 @@
     "font-awesome": "4.7.0",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
+    "jsoneditor": "^5.11.0",
     "leaflet": "1.0.3",
     "mage-sdk-js": "^1.0.2",
     "mage-sdk-js.archivist": "^0.1.0",
@@ -71,9 +74,12 @@
     "ngx-echarts": "1.2.2",
     "normalize.css": "6.0.0",
     "pace-js": "^1.0.2",
+    "plugin-typescript": "^8.0.0",
+    "renderjson": "^1.3.1",
     "roboto-fontface": "0.8.0",
     "rxjs": "^5.4.2",
     "socicon": "^3.0.5",
+    "systemjs": "^0.20.19",
     "tether": "1.4.0",
     "tinymce": "4.5.7",
     "ts-md5": "^1.2.2",
