--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "ngx-admin",
+  "name": "mage-admin",
   "version": "2.0.1",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/akveo/ngx-admin.git"
+    "url": "git+https://github.com/mage/mage-admin.git"
   },
   "bugs": {
-    "url": "https://github.com/akveo/ngx-admin/issues"
+    "url": "https://github.com/mage/mage-admin/issues"
   },
   "scripts": {
     "ng": "ng",
@@ -63,7 +63,7 @@
     "ionicons": "2.0.1",
     "jsoneditor": "^5.11.0",
     "leaflet": "1.0.3",
-    "mage-sdk-js": "^1.0.2",
+    "mage-sdk-js": "^1.1.0",
     "mage-sdk-js.archivist": "^0.1.0",
     "mage-sdk-js.session": "^0.1.0",
     "mage-sdk-js.time": "^0.1.0",
